Fix jump button, fix a tags, add default system fonts

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,24 @@
 body {
     margin: 0;
     padding: 0;
+    background-color: #EEE;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", "Noto Sans UI", sans-serif;
 }
 
 header {
     color: white;
     background-color: #298e42;
-    font-family: 'Noto Sans';
     padding-top: 100px;
     padding-bottom: 100px;
     width: 100%
 
+}
+
+a {
+    color: #298e42;
+    text-decoration: none;
 }
 
 footer {
@@ -38,6 +46,8 @@ footer {
 }
 
 #jumpButton {
+    background-color:#298342;
+    color: white;
     border-radius: 100px;
     box-shadow: 5px 5px 10px grey;
     display: block;
@@ -46,6 +56,7 @@ footer {
     z-index: 9999;
     bottom: 10%;
     right: 10%;
+    padding: 20px 25px;
 }
 
 .container {
